<resources>
    <string name="app_name">Inkacast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_tabs">Home</string>
    <string name="title_contact_tabs">Navegador</string>
    <string name="title_help_tabs">Playlist</string>
    <string name="title_profile_tabs">Usuario</string>
    <string name="description_fab">fab</string>
    <string name="tv_not_connected">No se encuentra conectado a ningun dispositivo</string>
    <string name="tv_empty">No tienes ninguna página web guardada aún.</string>

    <string name="tv_duplicate_screen">Duplicar pantalla</string>
    <string name="tv_tansfer_files">Transmitir contenido</string>
    <string name="tv_images">Ímagenes</string>
    <string name="tv_videos">Videos</string>
    <string name="tv_music">Música</string>
    <string name="tv_files">Archivos</string>
    <string name="logo_description">Logo Inkacast</string>
    <string name="add_device_button">Agregar dispositivo</string>
    <string name="cast_description">No hay dispositivo conectado.</string>
    <string name="setting_description">Ajustes</string>
    <string name="galery_description">Galeria</string>
    <string name="videos_description">Videos</string>
    <string name="music_description">Musica</string>
    <string name="files_description">Archivos</string>
    <string name="hint_seach_web">¿Qué se te antoja ver hoy?</string>
    <string name="coonected_to_device">Conectado a:</string>
    <string name="tv_change_device">Cambiar dispositivo</string>
    <string name="tv_streamming">Transmitiendo ...</string>
    <string name="connecting">Buscando dispositivos...</string>
    <string name="title_my_devices_1">Mis</string>
    <string name="title_my_devices_2">Dispositivos\n</string>
    <string name="title_list_playlist_1">Listas</string>
    <string name="title_list_playlist_2">de reproducción</string>
    <string name="chorecast">Chromecast</string>
    <string name="device_available">Dispositivo disponible</string>


    <string name="activity_name_browser">@string/app_name</string>
    <string name="activity_name_video">WebCast Video Player</string>
    <string name="activity_name_exoairplayersender">ExoAirPlayer sender</string>
    <string name="activity_name_hlsproxyconfiguration">HLS-Proxy configuration</string>

    <string name="user_agent" translatable="false">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Safari/537.36</string>

    <!-- BrowserActivity -->
    <string name="action_bookmark">Bookmark Webpage</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_videos">Videos</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="title_intent_chooser">Watch video in:</string>

    <!-- SettingsActivity -->
    <string name="pref_settings_key" translatable="false">settings_key</string>
    <string name="pref_settings_title">WebCast Settings</string>

    <!-- SettingsActivity: Video Player -->
    <string name="pref_videoplayer_array_names_1">internal w/ Chromecast sender</string>
    <string name="pref_videoplayer_array_names_2">external</string>
    <string name="pref_videoplayer_array_names_3">@string/activity_name_exoairplayersender</string>
    <string name="pref_videoplayer_array_names_4">@string/activity_name_hlsproxyconfiguration</string>

    <string name="pref_videoplayer_array_values_1" translatable="false">internal</string>
    <string name="pref_videoplayer_array_values_2" translatable="false">external</string>
    <string name="pref_videoplayer_array_values_3" translatable="false">exoairplayer</string>
    <string name="pref_videoplayer_array_values_4" translatable="false">hlsproxy</string>

    <string-array name="pref_videoplayer_array_names">
        <item>@string/pref_videoplayer_array_names_1</item>
        <item>@string/pref_videoplayer_array_names_2</item>
        <item>@string/pref_videoplayer_array_names_3</item>
        <item>@string/pref_videoplayer_array_names_4</item>
    </string-array>

    <string-array name="pref_videoplayer_array_values">
        <item>@string/pref_videoplayer_array_values_1</item>
        <item>@string/pref_videoplayer_array_values_2</item>
        <item>@string/pref_videoplayer_array_values_3</item>
        <item>@string/pref_videoplayer_array_values_4</item>
    </string-array>

    <!-- SettingsActivity: Video Player -->
    <string name="pref_videoplayer_key" translatable="false">pref_videoplayer</string>
    <string name="pref_videoplayer_default" translatable="false">@string/pref_videoplayer_array_values_1</string>
    <string name="pref_videoplayer_title">Video Player</string>
    <string name="pref_videoplayer_summary">watch videos using..</string>

    <!-- SettingsActivity: Page Load Behavior -->
    <string name="pref_pageloadbehavior_array_name_cancel">Cancel</string>
    <string name="pref_pageloadbehavior_array_name_proceed">Proceed</string>
    <string name="pref_pageloadbehavior_array_name_ask">Ask</string>

    <string name="pref_pageloadbehavior_array_value_cancel" translatable="false">cancel</string>
    <string name="pref_pageloadbehavior_array_value_proceed" translatable="false">proceed</string>
    <string name="pref_pageloadbehavior_array_value_ask" translatable="false">ask</string>

    <string-array name="pref_pageloadbehavior_array_names">
        <item>@string/pref_pageloadbehavior_array_name_cancel</item>
        <item>@string/pref_pageloadbehavior_array_name_proceed</item>
        <item>@string/pref_pageloadbehavior_array_name_ask</item>
    </string-array>

    <string-array name="pref_pageloadbehavior_array_values">
        <item>@string/pref_pageloadbehavior_array_value_cancel</item>
        <item>@string/pref_pageloadbehavior_array_value_proceed</item>
        <item>@string/pref_pageloadbehavior_array_value_ask</item>
    </string-array>

    <!-- SettingsActivity: Page Load Behavior on HTTPS Certificate Error -->
    <string name="pref_badssl_pageloadbehavior_key" translatable="false">pref_badssl_pageloadbehavior</string>
    <string name="pref_badssl_pageloadbehavior_default" translatable="false">@string/pref_pageloadbehavior_array_value_cancel</string>
    <string name="pref_badssl_pageloadbehavior_title">On HTTPS Certificate Error</string>
    <string name="pref_badssl_pageloadbehavior_summary">choose page load behavior..</string>

    <!-- SettingsActivity: Enable Remote Debugger -->
    <string name="pref_enableremotedebugger_key" translatable="false">pref_enableremotedebugger</string>
    <string name="pref_enableremotedebugger_default" translatable="false">false</string>
    <string name="pref_enableremotedebugger_title">Enable Remote Debugger</string>
    <string name="pref_enableremotedebugger_summary_on">WebView can be inspected on LAN</string>
    <string name="pref_enableremotedebugger_summary_off">WebView cannot be inspected on LAN</string>

    <!-- SettingsActivity: Enable AdBlock -->
    <string name="pref_enableadblock_key" translatable="false">pref_enableadblock</string>
    <string name="pref_enableadblock_default" translatable="false">true</string>
    <string name="pref_enableadblock_title">Enable AdBlock</string>
    <string name="pref_enableadblock_summary_on">Blocking hosts that serve: ads, trackers, malware, spam</string>
    <string name="pref_enableadblock_summary_off">Allowing requests to all hosts</string>

    <!-- ExoAirPlayerSenderActivity -->
    <string name="pref_exoairplayersender_persistentcookies_key" translatable="false">pref_exoairplayersender_persistentcookies</string>
    <string name="url_exoairplayersender_es6" translatable="false">http://webcast-reloaded.surge.sh/airplay_sender.html</string>
    <string name="url_exoairplayersender_es5" translatable="false">http://webcast-reloaded.surge.sh/airplay_sender.es5.html</string>

    <!-- HlsProxyConfigurationActivity -->
    <string name="pref_hlsproxyconfiguration_persistentcookies_key" translatable="false">pref_hlsproxyconfiguration_persistentcookies</string>
    <string name="url_hlsproxyconfiguration" translatable="false">http://webcast-reloaded.surge.sh/proxy.html</string>

    <!-- VideoActivity -->
    <string name="cast_receiver_id" translatable="false">6BFED418</string>

    <string name="media_route_menu_title">Cast</string>
    <string name="cast_context_error">Failed to get Cast context. Try updating Google Play Services and restart the app.</string>

    <!-- AlertDialog: Page Load Behavior on HTTPS Certificate Error -->
    <string name="alertdialog_badssl_pageloadbehavior_title">HTTPS Certificate Error</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_date_invalid">The date of the certificate is invalid.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_expired">The certificate has expired.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_idmismatch">Hostname mismatch.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_invalid">A generic error occurred.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_notyetvalid">The certificate is not yet valid.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="alertdialog_badssl_pageloadbehavior_label_url">URL:</string>
    <string name="alertdialog_badssl_pageloadbehavior_label_button_positive">@string/pref_pageloadbehavior_array_name_proceed</string>
    <string name="alertdialog_badssl_pageloadbehavior_label_button_negative">@string/pref_pageloadbehavior_array_name_cancel</string>
    <string name="title_fragment_webview">Mis webs</string>
    <string name="remove_web_site">Eliminar sitio web</string>
    <string name="direct_web_site">Crear acceso directo</string>


</resources>