<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home_tabs"/>

    <item
        android:id="@+id/action_browser"
        android:icon="@drawable/ic_browser"
        android:title="@string/title_contact_tabs"/>

    <item
        android:id="@+id/placeholder"
        android:title=""/>


    <item
        android:id="@+id/action_playlist"
        android:icon="@drawable/ic_playlist"
        android:title="@string/title_help_tabs"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile_tabs"/>




</menu>