<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnTertiary"
    tools:context=".HosLayer.PlayListModule.PlaylistFragment">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_list_playlist_1"
            android:textSize="23sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsbold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_list_playlist_2"
            android:textSize="23sp"
            android:layout_marginStart="7sp"
            style="@style/Theme.Inkacast.TextDefault"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        >

        <include  layout="@layout/playlist_item" />
        <include layout="@layout/playlist_item" />
        <include layout="@layout/playlist_item" />
        <include layout="@layout/playlist_item" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="26dp"
        app:fabSize="mini"

        app:tint="@color/white"
        android:backgroundTint="#FF8000"
        android:contentDescription="@string/description_fab"
        app:borderWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>