<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="?attr/colorOnTertiary"
    tools:context=".HosLayer.DevicesModule.DevicesActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_my_devices_1"
            android:textSize="23sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsbold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_my_devices_2"
            android:textSize="23sp"
            android:layout_marginStart="7sp"
            style="@style/Theme.Inkacast.TextDefault"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_search_devices"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="?attr/colorOnTertiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/connecting"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting"
            android:textSize="19sp"
            style="@style/Theme.Inkacast.TextDefault"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            />
    </LinearLayout>

    <androidx.mediarouter.app.MediaRouteButton
        android:id="@+id/media_route_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorOnPrimary"
        android:mediaRouteTypes="user"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_header"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="15dp"
        android:layout_marginVertical="10dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/media_route_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="11dp"
            style="@style/Theme.Inkacast.Background"
            >
            <LinearLayout
                android:id="@+id/ll_device_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tv_connect"

                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start"
                    android:layout_gravity="center"
                    android:layout_marginStart="26dp"
                    >
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chorecast"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/poppinsbold"
                        />
                    <TextView
                        android:id="@+id/tv_subname"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/device_available"
                        android:fontFamily="@font/roboto_light"
                        style="@style/Theme.Inkacast.TextDefault"

                        />
                </LinearLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/ll_devices"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_cast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btn_add_devices"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:elevation="12sp"
            android:layout_width="200dp"
            android:layout_marginHorizontal="40dp"
            android:layout_height="40dp"
            android:background="@drawable/corner_round"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/add_device_button"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>